Download quasi ok. Ale devi trasformare in Hex e poi in String quel maledetto tok.nextToken() :)